--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
     <button type="button" class="btn btn-dark">Dark</button>
 
     <button type="button" class="btn btn-link">Link</button>
+  </br>
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
   </body>
 </html>
